BUG: 258974

Prevent two different translations of an entity that is referenced by the translated string. Is something is still wrong after this fix don't crash anyway output a warning instead.

svn path=/trunk/extragear/office/kmymoney/; revision=1232929